--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 
 
 body{
-  min-height: 2220px
+  /* min-height: 2220px */
 }
 :root{
   --primary-color:rgb(40, 39, 39);
@@ -22,9 +22,11 @@ nav {
   padding: 20px 50px;
   gap: 20px;
   background-color:var(--primary-color);
-  position: fixed;
+  position: sticky;
   width: 100%;  
   z-index: 999;
+  top: 0;
+  margin-bottom: 70px;
 }
 .logo > img{
   border-radius: 50%;
@@ -139,3 +141,46 @@ footer {
   border-radius: 5px;
 
 }
+
+/* .post-blog{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+} */
+
+.post-blog form{
+  gap: 20px;
+}
+
+.blog-details{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.post-btn{
+  background: var(--btn-color);
+  color: var(--secondary-color);
+  cursor: pointer;
+  height: 50px;
+  width: 110px;
+  border: none;
+  border-radius: 5px;
+  text-shadow: none;
+  margin-left: 10px;
+  box-shadow: 0px 0px 11px 2px var(--btn-color);
+
+}
+
+textarea,.blog-details input{
+  width: 100%;
+  /* height: 150px; */
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
+
