--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body{
 :root{
   --primary-color:rgb(40, 39, 39);
   --secondary-color:aliceblue;
-  --hover-color:rgb(13, 176, 138);
+  --hover-color:rgb(93 91 93);
   --btn-color:#6f767a;
 }
 
@@ -26,7 +26,7 @@ nav {
   width: 100%;  
   z-index: 999;
   top: 0;
-  margin-bottom: 70px;
+  /* margin-bottom: 70px; */
 }
 .logo > img{
   border-radius: 50%;
@@ -101,6 +101,9 @@ nav a{
     color: rgb(108, 110, 111);
 }
 
+#search-icon{
+  cursor: pointer;
+}
 footer {
   display: flex;
   color: var(--secondary-color);
@@ -142,11 +145,6 @@ footer {
 
 }
 
-/* .post-blog{
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-} */
 
 .post-blog form{
   gap: 20px;
@@ -314,12 +312,7 @@ input[type="color"]::-moz-color-swatch {
   border-radius: 15px;
   box-shadow: 0 0 0 2px #ffffff, 0 0 0 3px #020929;
 }
-/* #text-input {
-  margin-top: 10px;
-  border: 1px solid #dddddd;
-  padding: 20px;
-  height: 50vh;
-} */
+
 .active {
   background-color: #e0e9ff;
 }
