--- a/public/style.css
+++ b/public/style.css
@@ -185,6 +185,11 @@ textarea,.blog-details input,#editor{
 
 }
 
+.card-container{
+  display: grid;
+  grid-template-columns:auto auto auto;
+  gap: 20px;
+}
 .container {
   display: flex;
   width: 1040px;
@@ -196,6 +201,7 @@ textarea,.blog-details input,#editor{
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  
   overflow: hidden;
   width: 300px;
 }
