create image uploaded using typeScript

--- a/public/style.css
+++ b/public/style.css
@@ -67,9 +67,6 @@ nav a{
   max-height: 700px;
 } 
 
-#search-icon{
-  cursor: pointer;
-}
 footer {
   position: fixed;
   left: 0;
@@ -105,7 +102,6 @@ footer {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
 }
-
 .contact-form label{
   margin-right: 5px;
 }
@@ -117,16 +113,26 @@ footer {
   border-radius: 5px;
 }
 
+.post-blog{
+  margin-top: 100px;
+  padding: 20px 50px;
+}
+
+.upload-photo{
+  display: flex;
+  flex-direction: column;
+}
+.upload-photo > img{
+  margin-top: 20px;
+}
 .post-blog form{
   gap: 20px;
 }
-
 .blog-details{
   display: flex;
   justify-content: space-between;
   margin: 20px 0;
 }
-
 .post-btn{
   background: var(--btn-color);
   color: var(--secondary-color);
@@ -136,10 +142,10 @@ footer {
   border: none;
   border-radius: 5px;
   text-shadow: none;
+  margin: 20px 50px;
   margin-left: 10px;
   box-shadow: 0px 0px 11px 2px var(--btn-color);
 }
-
 textarea,.blog-details input,#editor{
   width: 100%;
   padding: 12px 20px;
@@ -157,7 +163,6 @@ textarea,.blog-details input,#editor{
 #editor{
   min-height: 400px;
 }
-
 .card-container{
   display: grid;
   grid-template-columns:auto auto auto;
@@ -191,31 +196,9 @@ textarea,.blog-details input,#editor{
   padding: 20px;
   min-height: 250px;
 }
-
 .bold{
   font-weight: bold;
 }
-
-.tag {
-  background: #cccccc;
-  border-radius: 50px;
-  font-size: 12px;
-  margin: 0;
-  color: #fff;
-  padding: 2px 10px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-.tag-teal {
-  background-color: #47bcd4;
-}
-.tag-purple {
-  background-color: #5e76bf;
-}
-.tag-pink {
-  background-color: #cd5b9f;
-}
-
 .card-body p {
   font-size: 13px;
   margin: 0 0 40px;
